# ShiningEngine

./: .gitignore  Cargo.toml  NOTES.md  TODO.md
collada/: Cargo.toml
collada/src/: config.rs  elements.rs  lib.rs
collada/src/elements/: mod.rs
defs/: Cargo.toml
defs/src/: control.rs  lib.rs  render.rs  ubo.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/camera/: mod.rs  null.rs  player.rs
engine/src/control/: mod.rs  null.rs  user.rs
engine/src/scene/: mod.rs
engine/src/timer/: global.rs  mod.rs  null.rs
engine/src/util/: mod.rs
engine/src/util/textbuffer/: mod.rs
examples/menu/: Cargo.toml
examples/menu/src/: main.rs  start.rs  submenu.rs
examples/resources/models/: FaceModels.dae  MenuHut.dae  MenuHut.toml
examples/scenery/: Cargo.toml  build.rs
examples/scenery/src/: main.rs  menu.rs  scene.rs
model/: Cargo.toml
model/src/: factory.rs  lib.rs  types.rs
platform_desktop/: Cargo.toml
platform_desktop/src/: control_translations.rs  lib.rs
platform_windows/: Cargo.toml
platform_windows/src/: control_translations.rs  lib.rs
renderer/: Cargo.toml  build.rs
renderer/shaders/vk/: cube.frag  cube.vert  cube_clipped.vert  text.frag  text.vert  triangle.frag  triangle.vert  triangle_clipped.vert  water.frag  water.vert
renderer/src/: lib.rs  null.rs
renderer/src/vk_renderer/: buffers.rs  framebuffers.rs  images.rs  mod.rs  per_image_resources.rs  pipeline.rs  pipeline_config.rs  pipeline_set.rs  render_core.rs  renderpass.rs
renderer/src/vk_renderer/per_image_resources/: mod.rs  per_pass_resources.rs  pipeline.rs  pipeline_set.rs  renderpass.rs
renderer/src/vk_renderer/render_core/: debug.rs  device.rs  instance.rs  mod.rs  swapchain.rs
resources/font/: Musica.fnt
resources/models/blender/: FaceModels.blend  MenuHut.blend
sample_app/: Cargo.toml
sample_app/src/: main.rs
scenegen/: Cargo.toml
scenegen/resources/: app.schema.json  scene.schema.json  scenegen.schema.json
scenegen/resources/test/: features_bad.json  features_good.json  full_featured_app.json  graphics_bad.json  platform_bad.json  text_file_with_json.txt
scenegen/src/: lib.rs
scenegen/src/deserialiser/: app.rs  mod.rs  scene.rs  structures.rs  validator.rs
scenegen/src/generator/: mod.rs  (+2 more)
(+40 files in other folders)
