[package]
name = "engine"
version = "0.1.0"
authors = ["Thomas <thomasr1987@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.18.0"
raw-window-handle = "0.3.3"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
lockfree = "0.5.1"
defs = { path = "../defs" }
model = { path = "../model" }
