[package]
name = "renderer"
version = "0.1.0"
authors = ["Thomas <thomasr1987@gmail.com>"]
edition = "2018"

[build-dependencies]
model = { path = "../model" }
collada = { path = "../collada" }

[dependencies]
ash = "0.32.1"
ash-window = "0.6.0"
raw-window-handle = "0.3.3"
vk-shader-macros = "0.2.6"
vk-mem = "0.2.2"
cgmath = "0.18.0"
image = { version = "0.23.13", default-features = false, features = ["jpeg", "png"] }
model = { path = "../model" }
defs = { path = "../defs" }
