[package]
name = "sample_app"
version = "0.1.0"
authors = ["Thomas <thomasr1987@gmail.com>"]
edition = "2018"

[dependencies]
raw-window-handle = "0.3.3"
defs = { path = "../defs" }
platform_windows = { path = "../platform_windows" }
renderer = { path = "../renderer" }
engine = { path = "../engine" }
