[package]
name = "sample_app"
version = "0.1.0"
authors = ["Thomas <thomasr1987@gmail.com>"]
edition = "2018"

[build-dependencies]
model = { path = "../../model" }
collada = { path = "../../collada" }

[dependencies]
cgmath = "0.18.0"
defs = { path = "../../defs" }
platform_windows = { path = "../../platform_windows" }
renderer = { path = "../../renderer" }
engine = { path = "../../engine" }
model = { path = "../../model" }
